# Portfolio

./: .gitmodules  LICENSE  README.md  create_db.py  models.py  pyproject.toml  pytest.ini  requirements.txt  seed_db.py  setup.cfg
.github/ISSUE_TEMPLATE/: test.md
.github/workflows/: auto-aupdate-subtrees.yml
Bash/: dnsinfo.sh  wordpress_autoupdate.sh
PowerShell/: Invoke-WebRequestV2.ps1  getRemoteService.ps1  registrySearch.ps1  searchRemoteEventLog.ps1  testLocalWebApp.ps1
PowerShell/bnoobman/: QoL.ps1  bnoobman.psd1  bnoobman.psm1  sys-admin.ps1
Python/: README.md
Python/bnoobot/: .gitignore  LICENSE  README.md
Python/bnoobot/.github/workflows/: auto-merge-develop-to-main.yml  lint.yml
Python/bnoobot/docs/: conf.py  index.rst
Python/bnoobot/docs/_templates/: footer.html
Python/bnoobot/docs/contributing/: index.rst
Python/bnoobot/docs/tests/: Tests_Notes.md  Tests_Notes.rst  index.rst
Python/bnoobot/docs/usage/: Bot Commands.rst  config_loader.rst  main.rst  (+1 more)
Python/bnoobot/tests/: conftest.py  test_bot_functions.py  test_config_loader.py  test_main.py  test_tasks.py
Python/flask-kanban-app/: app.py
Python/flask-kanban-app/static/: style.css
Python/flask-kanban-app/templates/: kanban.html
docs/: models_notes.md
docs/contributing/: CONTRIBUTING.rst
docs/usage/: README.rst  bot_functions.rst  commands.rst  index.rst  scheduler.rst
src/bnoobot/: __init__.py  bot_functions.py  commands.py  config_loader.py  main.py  scheduler.py  spotify.py
src/bnoobot/config/: skeleton_config.yaml
tests/: test_commands.py  test_scheduler.py
(+4 files in other folders)
