[metadata]
name = bnoobot
description = My personal Discord bot.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ben Covert
author_email = fahzee.music@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    discord.py==2.4.0
    PyYAML==6.0.2
    pytest~=8.3.3
    requests~=2.32.3
    setuptools==75.1.0
    pytz~=2024.2

[options.packages.find]
where = src
